[metadata]
name = pyceptive
version = attr: pyceptive._version.__version__
description = Data change events on top of pydantic
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/davidbrochart/pyceptive
platforms = Windows, Linux, Mac OS X
keywords = pydantic

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = pyceptive
python_requires = >=3.7

install_requires =
  pydantic

[options.extras_require]
test =
  flake8
  black
  mypy
  pytest
